--- a/sway/config
+++ b/sway/config
@@ -212,6 +212,7 @@ mode "resize" {
     # Return to default mode
     bindsym Return mode "default"
     bindsym Escape mode "default"
+    bindsym $mod+r mode "default"
 }
 bindsym $mod+r mode "resize"
 
@@ -251,14 +252,14 @@ client.unfocused         #5c6370 #3b3228 #ffffff #ffffff
 
 
 
-for_window [app_id="telegramdesktop"] floating enable
-for_window [title="weixin"] floating enable
-for_window [class="weixin"] floating enable
-for_window [instance="weixin"] floating enable
-for_window [class="icalingua"] floating enable
+#for_window [app_id="telegramdesktop"] floating enable
+#for_window [title="weixin"] floating enable
+#for_window [class="weixin"] floating enable
+#for_window [instance="weixin"] floating enable
+#for_window [class="icalingua"] floating enable
 
 # fix flameshot issue
-for_window [app_id="flameshot"] border pixel 0, floating enable, fullscreen disable, move absolute position 0 0
+#for_window [app_id="flameshot"] border pixel 0, floating enable, fullscreen disable, move absolute position 0 0
 
 # start some programs
 
@@ -271,7 +272,3 @@ set $wallpapers_path /home/kui/pic/wallpaper
 exec wpaperd &
 
 include /etc/sway/config.d/*
-
-
-
-
