--- a/sway/config
+++ b/sway/config
@@ -1,3 +1,4 @@
+include /etc/sway/config.d/*
 
 set $mod Mod4
 
@@ -8,11 +9,12 @@ set $right l
 
 set $term kitty
 
+#application launcher
 set $menu wofi -c ~/.config/wofi/config -s ~/.config/wofi/style.css -I
-#set $menu kickoff
 
-output  DP-1 resolution 1920x1080 position 0,0
-output eDP-1 resolution 1920x1080 position 1920,0
+#if have multiple screen
+output  eDP-1 resolution 1920x1080 position 0,0
+#output eDP-1 resolution 1920x1080 position 1920,0
 
 
 workspace 1 output DP-1
@@ -25,23 +27,10 @@ workspace 7 output DP-1
 workspace 8 output DP-1
 workspace 9 output DP-1
 workspace 10 output eDP-1
+#workspace 10 output eDP-1
 
 
 
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
 
 ### Input configuration
 #
@@ -178,19 +167,6 @@ input "type:touchpad" {
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-#
 # Resizing containers:
 #
 mode "resize" {
@@ -216,26 +192,9 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
-#bar {
-#    position top
-#
-#    # When the status_command prints a new line to stdout, swaybar updates.
-#    # The default just shows the current date and time.
-#    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-#
-#    colors {
-#        statusline #ffffff
-#        background #323232
-#        inactive_workspace #32323200 #32323200 #5c5c5c
-#    }
-#}
 
 bar {
-swaybar_command waybar
+  swaybar_command waybar
 }
 
 default_border pixel 2
@@ -258,17 +217,19 @@ client.unfocused         #5c6370 #3b3228 #ffffff #ffffff
 #for_window [instance="weixin"] floating enable
 #for_window [class="icalingua"] floating enable
 
-# fix flameshot issue
-#for_window [app_id="flameshot"] border pixel 0, floating enable, fullscreen disable, move absolute position 0 0
 
 # start some programs
 
+#start fcitx5
 exec_always fcitx5 -d --replace &
 
-set $wallpapers_path /home/kui/pic/wallpaper
+
+#set $wallpapers_path /home/kui/pic/wallpaper
 
 #output * bg `find $wallpapers_path -type f | shuf -n 1` fill
 
+#start wallpaper application
 exec wpaperd &
 
-include /etc/sway/config.d/*
+#to fix flameshot
+for_window [app_id="flameshot"] border pixel 0, floating enable, fullscreen disable, move absolute position 0 0
